# chronos

./: .gitignore  Procfile  README.md  create_requirements.ps1  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: checks.yml  mypy-and-black.yml
chronos/: __main__.py  bot.py  utils.py
