[tool.poetry]
name = "chronos"
version = "1.0.0"
description = "Manage DND Party timezones"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.4.1"
"discord.py-stubs" = "^1.4.0"
structlog = "^20.1.0"
colorama = "^0.4.3"
HumanTime = "^0.1.6"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
pydantic = "^1.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = "^20.8b1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
